--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,7 @@
             <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">X</button>
         </div>
         <div class="modal-body" >
-        	
-        	
-          <iframe width=100% height="315" src="https://www.youtube.com/embed/BQ0mxQXmLsk?autoplay=1"  frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        	<iframe width="100%" height="315" src="https://www.youtube.com/embed/BQ0mxQXmLsk?rel=0&amp;controls=0&amp;showinfo=0&amp;start=156&amp;autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
         </script>
         <script type="text/ng-template" id="video2.html">
@@ -82,10 +80,10 @@
         		 <button type="button"  ng-click="$ctrl.open('video1')"><img src="images/perfect.png"></button>
         	</li>
         	<li>
-        		<button type="button"  ng-click="$ctrl.open('video2')"><img src="images/thunder.png"></button>
+        		<button type="button"  ng-click="$ctrl.open('video2')"><img src="images/perfect.png"></button>
         	</li>
         	<li>
-        		<button type="button" ng-click="$ctrl.open('video3')"><img src="images/perfect.png"></button>
+        		<button type="button" ng-click="$ctrl.open('video3')"><img src="images/thunder.png"></button>
         	</li>
         </ul>
        </div>
