--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <div class="div3">
  	    <h3>Look what we found...</h3>
     </div>
-    <div ng-controller="ModalDemoCtrl as $ctrl" class="modal-demo" id="div4">
+    <div ng-controller="ModalDemoCtrl as $ctrl" class="modal-demo" id="div4" align="center">
         <script type="text/ng-template" id="video1.html">
         <div class="modal-header">
             <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">X</button>
@@ -77,7 +77,7 @@
        <div class="youtubeVideos" align="center">
         <ul>
         	<li>
-        		 <button type="button"  ng-click="$ctrl.open('video1')"><img src="images/perfect.png"></button>
+        		 <button type="button"  ng-click="$ctrl.open('video1')"><img src="images/hawana.png"></button>
         	</li>
         	<li>
         		<button type="button"  ng-click="$ctrl.open('video2')"><img src="images/perfect.png"></button>
